--- a/blog_project/src/main/resources/application.yml
+++ b/blog_project/src/main/resources/application.yml
@@ -1,6 +1,35 @@
+server:
+  port: 8000
+  servlet:
+    context-path: /blog
+    encoding:
+      charset: UTF-8
+      enabled: true
+      force: true
+
 spring:
+  mvc:
+    view:
+      prefix: /WEB-INF/views/
+      suffix: .jsp
+
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver # mysql의 jdbc 드라이버
     url: jdbc:mysql://localhost:3306/blog?serverTimezone=Asia/Seoul # 데이터베이스 url
     username: chaehyeon
     password: dl7164
+
+  jpa:
+    open-in-view: true
+    hibernate:
+      ddl-auto: create
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+      use-new-id-generator-mappings: false
+    show-sql: true
+    properties:
+      hibernate.format_sql: true
+
+    jackson:
+      serialization:
+        fail-on-empty-beans: false
