Create_DB_Table_and_Test_Insert_21.07.16

--- a/blog_project/src/main/resources/application.yml
+++ b/blog_project/src/main/resources/application.yml
@@ -22,10 +22,10 @@ spring:
   jpa:
     open-in-view: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: create # 프로젝트를 실행할 때마다 새로 만든다. // update, none // 최초에만 create
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-      use-new-id-generator-mappings: false
+      use-new-id-generator-mappings: false # JPA의 기본 넘버링 전략을 따라가지 않고, 프로젝트에서 연결된 DB의 넘버링 전략을 따라간다.
     show-sql: true
     properties:
       hibernate.format_sql: true
@@ -33,3 +33,12 @@ spring:
     jackson:
       serialization:
         fail-on-empty-beans: false
+
+  devtools:
+    livereload:
+      enabled: true
+    restart:
+      enabled: true
+
+  freemarker:
+    cache: false
